tests/ui/type/clarify-error-for-generics-with-default-issue-120785.stderr
error[E0308]: mismatched types
  --> $DIR/clarify-error-for-generics-with-default-issue-120785.rs:6:9
   |
LL |     let mut b: What<usize> = What(5, vec![1, 2, 3]);
   |                ----------- expected due to this type
LL |     let c: What<usize, String> = What(1, String::from("meow"));
LL |     b = c;
   |         ^ expected `What`, found `What<usize, String>`
   |
   = note: expected struct `What<_, Vec<usize>>`
              found struct `What<_, String>`

error[E0308]: mismatched types
  --> $DIR/clarify-error-for-generics-with-default-issue-120785.rs:10:9
   |
LL |     let mut e: What<usize> = What(5, vec![1, 2, 3]);
   |                ----------- expected due to this type
LL |     let f: What<usize, Vec<String>> = What(1, vec![String::from("meow")]);
LL |     e = f;
   |         ^ expected `What`, found `What<usize, Vec<String>>`
   |
   = note: expected struct `What<_, Vec<usize>>`
              found struct `What<_, Vec<String>>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
